<?xml version="1.0" encoding="utf-8"?>
<resources>
  <item name="itemTitle" type="id" />
  <item name="itemBadge" type="id" />
  <item name="badgeHome" type="id" />
  <item name="badgeAway" type="id" />
  <item name="infoContainer" type="id" />
  <item name="eventPastText" type="id" />
  <item name="eventNextText" type="id" />
  <item name="menuFavorite" type="id" />
  <item name="parentContainer" type="id" />
  <item name="items" type="id" />
  <item name="messageView" type="id" />
  <item name="searchInput" type="id" />
  <item name="searchView" type="id" />
  <item name="titleHome" type="id" />
  <item name="scoreText" type="id" />
  <item name="playTimeText" type="id" />
  <item name="titleAway" type="id" />
  <item name="itemDescText" type="id" />
  <item name="menuSearch" type="id" />
  <item name="homeToolbar" type="id" />
  <item name="homePager" type="id" />
  <item name="clusterListView" type="id" />
  <item name="eventView" type="id" />
  <item name="eventBadgeView" type="id" />
  <item name="eventVs" type="id" />
  <item name="sectionInfoView" type="id" />
  <item name="teamLineupView" type="id" />
  <item name="loadingView" type="id" />
  <item name="teamView" type="id" />
  <item name="leagueView" type="id" />
  <item name="teamSimpleView" type="id" />
  <item name="teamDetailView" type="id" />
  <item name="classementView" type="id" />
  <item name="leagueListContainer" type="id" />
  <item name="leagueGrid" type="id" />
  <item name="homeContainer" type="id" />
  <item name="homeToolbarContainer" type="id" />
  <item name="favoriteListContainer" type="id" />
  <item name="favoriteList" type="id" />
  <item name="eventListContainer" type="id" />
  <item name="eventToolbarContainer" type="id" />
  <item name="eventToolbar" type="id" />
  <item name="eventList" type="id" />
  <item name="eventDetailToolbarContainer" type="id" />
  <item name="eventDetailToolbar" type="id" />
  <item name="eventDetailItems" type="id" />
  <item name="eventDetailItemContainer" type="id" />
  <item name="homeTabLayout" type="id" />
  <item name="leagueDetailToolbarContainer" type="id" />
  <item name="leagueDetailToolbar" type="id" />
  <item name="leagueDetailItemContainer" type="id" />
  <item name="leagueDetailItems" type="id" />
  <item name="clusterList" type="id" />
  <item name="clusterListContainer" type="id" />
  <item name="searchResultContainer" type="id" />
  <item name="searchResults" type="id" />
  <item name="teamToolbarContainer" type="id" />
  <item name="teamToolbar" type="id" />
  <item name="teamListContainer" type="id" />
  <item name="teamList" type="id" />
</resources>