...
  <!-- fragments -->
  <fragment
    android:id="@+id/homeFragment"
    android:name="id.mustofa.kadesport.ui.home.HomeFragment">
    <action
      android:id="@+id/action_to_leagueDetail"
      app:destination="@id/leagueDetailFragment"
      app:enterAnim="@anim/slide_in_right"
      app:exitAnim="@anim/slide_out_left" />
  </fragment>

  <fragment
    android:id="@+id/leagueDetailFragment"
...
